# ferr

./: .gitignore  CHANGELOG.md  CLI.md  Cargo.toml  GUI_PLAN.md  LICENSE  PLAN.md  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
ferr-app/: .gitignore  CLAUDE_CODE_PROMPT.md  Cargo.toml  tauri.conf.json
ferr-app/capabilities/: default.json
ferr-app/src/: app.rs  bridge.rs  commands.rs  main.rs  progress.rs  theme.rs  volume.rs
ferr-app/src/bridge/: copy_bridge.rs  mod.rs  profile_bridge.rs  scan_bridge.rs  verify_bridge.rs  watch_bridge.rs
ferr-app/src/state/: app_state.rs  camera_state.rs  copy_state.rs  history_state.rs  mod.rs  profile_state.rs  scan_state.rs  verify_state.rs  watch_state.rs
ferr-app/src/ui/: mod.rs
ferr-app/src/ui/components/: mod.rs
ferr-app/src/ui/tabs/: mod.rs
ferr-app/ui/: index.html
ferr-app/ui/css/: components.css  main.css  sidebar.css  tabs.css
ferr-app/ui/js/: app.js  bridge.js
ferr-app/ui/js/components/: dropzone.js  healthcard.js  pills.js  progress.js
ferr-app/ui/js/tabs/: copy.js  health.js  history.js  settings.js  watch.js
ferr-app/ui/js/utils/: format.js  i18n.js  settings.js
ferr-app/ui/locales/: en.json  fr.json
ferr-camera/: Cargo.toml
ferr-camera/src/: lib.rs
ferr-cert/: Cargo.toml
ferr-cert/src/: lib.rs
ferr-cli/: Cargo.toml
ferr-cli/src/: main.rs
ferr-cli/tests/: cli.rs
ferr-core/: Cargo.toml
ferr-core/src/: lib.rs
ferr-core/tests/: integration.rs
ferr-hash/: Cargo.toml
ferr-hash/src/: lib.rs
ferr-notify/: Cargo.toml
ferr-notify/src/: lib.rs
ferr-par2/: Cargo.toml  build.rs
ferr-par2/src/: lib.rs
ferr-pdf/: Cargo.toml
ferr-pdf/src/: lib.rs
ferr-report/: Cargo.toml
ferr-report/src/: lib.rs
ferr-session/: Cargo.toml
ferr-session/src/: lib.rs
ferr-transfer/: Cargo.toml
ferr-transfer/src/: lib.rs
ferr-verify/: Cargo.toml
ferr-verify/src/: lib.rs
