[package]
name = "ferr-app"
version = "0.1.0"
edition = "2021"
authors = ["Frederick <frederick@example.com>"]
description = "Secure GUI file copy tool designed for DITs."
license = "MIT"

[dependencies]
ferr-core = { path = "../ferr-core" }
ferr-report = { path = "../ferr-report" }
ferr-session = { path = "../ferr-session" }
ferr-verify = { path = "../ferr-verify" }
ferr-camera = { path = "../ferr-camera" }
ferr-par2 = { path = "../ferr-par2" }

iced = { version = "0.13", features = ["tokio", "image", "svg"] }
tokio = { version = "1", features = ["full"] }
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
anyhow = "1"
