[workspace]
resolver = "2"

[package]
name    = "ferr-app"
version = "0.1.0"
edition = "2021"
description = "ferr — desktop GUI (Tauri v2)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2", features = [] }
tauri-plugin-dialog       = "2"
tauri-plugin-shell        = "2"
tauri-plugin-store        = "2"
tauri-plugin-notification = "2"
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"
tokio                     = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
