[package]
name    = "ferr-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rayon         = { workspace = true }
tracing       = { workspace = true }
chrono        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
notify        = { workspace = true }
ferr-hash     = { path = "../ferr-hash" }
ferr-report   = { path = "../ferr-report" }
ferr-transfer = { path = "../ferr-transfer" }
ferr-verify   = { path = "../ferr-verify" }
ferr-par2     = { path = "../ferr-par2" }
ferr-camera   = { path = "../ferr-camera" }
ferr-session  = { path = "../ferr-session" }   # lecture seule : find_file_by_hash (déduplication)

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
ferr-pdf = { path = "../ferr-pdf" }
