[package]
name    = "ferr-session"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rusqlite    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
ferr-report = { path = "../ferr-report" }
